--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "engines": {
-  "node": "24.x"
+    "node": "24.x"
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "framer-motion": "^12.23.26",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
